Cleanup and reformat